# landlord_data

./: .gitignore  JC_residential.ipynb  README.md  batch_geocoding_sympy_calculation.ipynb  errors.csv  errors_df.pkl  hackensack.ipynb  helpers.py  jersey_city_HA.csv  jersey_city_HA.geojson  landlord_data.ipynb  nj_municipal_codes.csv  nj_municipal_codes.ipynb  pyproject.toml  pyvenv.cfg  replacement_dict.py  schema.sql  test_data.csv  test_data.geojson
Hackensack/: errors_df.pkl  hackensack.ipynb
JerseyCity/: JerseyCity_PublicHousing.csv  addresses_df.csv  errors_df.csv  errors_df.pkl  geo_zip_dict.pickle  geolocated_zip_dict.pickle  jersey_city.ipynb  jersey_city_HA.geojson  jersey_city_residential.csv  landlords_df.pickle  public_housing_df.pkl  replacement_dict.py
Newark/: errors_df.pkl  errors_newark.pkl  newark.ipynb  newark.pkl
Paterson/: errors_df.pkl  paterson.ipynb  paterson_repl_dict.py
